# ouroboros

./: pyproject.toml
.claude-plugin/: SKILL_CAPABILITY_GUIDE.md
docs/: README.md
docs/agentos/: traceguard-observation-protocol.md  workflow-ir-v1.md
docs/rfc/: interview-milestone-lateral-contract.md
scripts/: install.sh
skills/interview/: SKILL.md
src/ouroboros/: ralph_loop.py
src/ouroboros/auto/: adapters.py  answerer.py  interview_driver.py  lateral_routing.py  ledger.py  pipeline.py  state.py  task_classes.py
src/ouroboros/bigbang/: interview.py
src/ouroboros/cli/: main.py
src/ouroboros/cli/commands/: mcp_doctor.py  plugin.py  plugin_dispatch.py  run.py
src/ouroboros/core/: runtime_transition.py  seed_contract_prompt.py
src/ouroboros/evolution/: loop.py  material_progress.py  watchdog.py
src/ouroboros/harness/: __init__.py  journal.py
src/ouroboros/hermes/: artifacts.py
src/ouroboros/mcp/tools/: authoring_handlers.py  auto_handler.py  execution_handlers.py  ralph_handlers.py  subagent.py
src/ouroboros/orchestrator/: baseline_metrics.py  baseline_metrics_format.py  codex_cli_runtime.py  hermes_runtime.py  parallel_executor.py  profile_strategy.py  runner.py  runtime_factory.py
src/ouroboros/persistence/: checkpoint.py
src/ouroboros/plugin/: digest.py  firewall.py  hooks.py  ledger_adapter.py  lockfile.py  manifest.py  trust_store.py  userlevel_registry.py
src/ouroboros/plugin/schemas/0.1/: _source.json  audit-event.schema.json  plugin.schema.json
src/ouroboros/plugin/schemas/0.3/: _source.json  audit-event.schema.json  plugin.schema.json
src/ouroboros/providers/: copilot_cli_adapter.py
tests/canonical/: README.md  conftest.py  test_canonical.py
tests/canonical/cli-todo/: expected.yaml  goal.txt
tests/fixtures/plugins-fixture/: README.md
tests/fixtures/plugins-fixture/plugins/github-pr-ops/: ouroboros.plugin.json
tests/fixtures/plugins-fixture/plugins/github-pr-ops/github_pr_ops/: __main__.py
tests/integration/plugin/: test_e2e.py
tests/unit/: test_claude_plugin_skill_guide.py  test_evolve_step.py  test_ralph_loop_progress.py
tests/unit/auto/: test_adapters_client_gates.py  test_answerer_via_domain_profile.py  test_interview_pipeline.py  test_pipeline_domain_profile.py  test_pipeline_evaluate.py  test_pipeline_lateral.py  test_state.py  test_surface.py  test_task_classes.py  test_user_preference_and_floor.py
tests/unit/backends/: test_capabilities.py
tests/unit/bigbang/: test_interview.py
tests/unit/cli/: test_mcp_doctor.py  test_plugin_command.py  test_plugin_command_mutating.py  test_plugin_dispatch.py  test_run_qa.py
tests/unit/core/: test_runtime_transition.py
tests/unit/evolution/: test_generation_watchdog.py  test_material_progress.py
tests/unit/harness/: test_journal_normalizer.py
tests/unit/hermes/: test_artifacts.py
tests/unit/mcp/tools/: test_definitions.py  test_subagent.py
tests/unit/orchestrator/: test_baseline_metrics.py  test_baseline_metrics_format.py  test_codex_cli_runtime.py  test_hermes_runtime.py  test_parallel_executor.py  test_profile_strategy.py  test_runner.py  test_runtime_factory.py  test_workflow_projection_boundary.py
tests/unit/persistence/: test_checkpoint.py
tests/unit/plugin/: test_digest.py  test_firewall.py  test_hook_permission_scopes.py  test_ledger_adapter.py  test_lockfile.py  test_manifest.py  test_manifest_hook_validation.py  test_manifest_schema_0_3.py  test_trust_store.py  test_userlevel_registry.py
tests/unit/providers/: test_claude_code_adapter.py  test_copilot_cli_adapter.py
tests/unit/scripts/: test_install_runtime_selection.py
